프로필 페이지 오류 픽스

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,13 +17,13 @@
 <body>
     <header class="main-header">
         <div class="header-layout">
-            <span class="header-logo logo"><a href="/">Chatta</a></span> 
+            <span class="header-logo logo"><a href="/">Chatta</a></span>
             <ul class="header-menu">
                 <li><a href="/">게시판 리스트</a></li>
             </ul>
             <div class="header-profie">
-                <div class="profile"  onclick="toggleHeaderProfile()">
-                    <img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/test_1280.jpg" alt="profile_image" />
+                <div class="profile" onclick="toggleHeaderProfile()">
+                    <img src="<%= profileImage %>" alt="profile_image" />
                 </div>
                 <ul class="header-profile-tab">
                     <li id="mobileView"><a href="/">게시판 리스트</a> </li>
@@ -59,6 +59,10 @@
                 </p>
                 <p>이메일: <%= user.email %>
                 </p>
+                <br />
+                <div class="profile-edit-button">
+                    <i class="fas fa-cog" alt="프로필 수정"> 프로필 수정</i>
+                </div>
             </div>
         </div>
 
@@ -96,7 +100,8 @@
                         <% } else { %>
                         <% posterChatRooms.forEach(function(room) { %>
                         <li>
-                            <a href="/chat_room?room_id=<%= room.room_id %>&category=<%= room.category %>" target="_blank">
+                            <a href="/chat_room?room_id=<%= room.room_id %>&category=<%= room.category %>"
+                                target="_blank">
                                 <%= room.title %> (<%= room.unreadMessages %> 안 읽은 메시지)
                                 <% if (room.latestUnreadMessage) { %>
                                 <span class="latest-message">
@@ -117,7 +122,8 @@
                         <% } else { %>
                         <% userChatRooms.forEach(function(room) { %>
                         <li>
-                            <a href="/chat_room?room_id=<%= room.room_id %>&category=<%= room.category %>">
+                            <a href="/chat_room?room_id=<%= room.room_id %>&category=<%= room.category %>"
+                                target="_blank">
                                 <%= room.title %> (<%= room.unreadMessages %> 안 읽은 메시지)
                                 <% if (room.latestUnreadMessage) { %>
                                 <span class="latest-message">
@@ -149,7 +155,7 @@
                         <% } else { %>
                         <% schedules.forEach(function(schedule) { %>
                         <li>
-                            <%= schedule.title %>: <%= schedule.date %>
+                            <%= schedule %>
                         </li>
                         <% }); %>
                         <% } %>
@@ -163,130 +169,75 @@
         <div class="footer-left">
             <div class="logo">chatta</div>
             <p class="footer-home">
-            <a href="/" class="link-1">Home</a>
-            <a class = "utube" href="/"> | <img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/youtubeicon.png" style="width: 20px; position: relative; top: 5px;"/></a>
-            <a class = "facebook" href="/"> | <img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/facebookicon.png" style="width: 20px; position: relative; top: 5px;"/></a>
-            </p>    
+                <a href="/" class="link-1">Home</a>
+                <a class="utube" href="/"> | <img
+                        src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/youtubeicon.png"
+                        style="width: 20px; position: relative; top: 5px;" /></a>
+                <a class="facebook" href="/"> | <img
+                        src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/facebookicon.png"
+                        style="width: 20px; position: relative; top: 5px;" /></a>
+            </p>
             <hr>
             <p class="footer-project-info">
                 <span>back-end socket project</span>
                 실시간 채팅 및 동시 영상시청 웹 애플리케이션
-            </p> 
             </p>
-                <p class="footer-team-name">Copyright © 2023 socket-chat project</p>
-            </div>
-            
-            <div class="footer-space"></div>
+            </p>
+            <p class="footer-team-name">Copyright © 2023 socket-chat project</p>
+        </div>
 
-            <div class="footer-git">
+        <div class="footer-space"></div>
+
+        <div class="footer-git">
             <div>
                 <p>김민영</p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img
+                            src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png"
+                            style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
             <div>
                 <p>김성제</p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img
+                            src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png"
+                            style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
             <div>
                 <p>류승기</p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img
+                            src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png"
+                            style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
             <div>
                 <p>정인근</p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img
+                            src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png"
+                            style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
             <div>
                 <p>최영찬 </p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img
+                            src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png"
+                            style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
         </div>
     </footer>
-<script src="/public/js/index.js" defer></script>
-<script src="/public/js/board/board_CRUD.js"></script>
-<script src="/public/js/board/board_render.js"></script>
-<script src="/public/js/board/board_render_func.js"></script>
-<script src="/public/js/board/board_book_mark.js"></script>
-<script src="/public/js/profile.js"></script>
-<script src="/public/js/header.js"></script>
-
-<script>
-
-    let list = [];
-    
-    ( function() {
-       
-        getbaordPagenation();
-    
-    })();
-
-    async function getbaordPagenation() {    
-
-        try {
-        
-            const findAllData_board = await findall_profile_bookmark_board ();
-
-            if (findAllData_board.length > 0) {
-                const wrap = document.querySelector("#wrap");
-                let boxhtml = ``;
-                for ( let i=0; i<findAllData_board.length; i++) {
-                    let date = new Date(`${findAllData_board[i].createdAt}`);
-                    list.push(findAllData_board[i].board);
-                    const data = {
-                        category : findAllData_board[i] && findAllData_board[i].board.category ? findAllData_board[i].board.category : '',
-                        title :  findAllData_board[i] && findAllData_board[i].board.title ? findAllData_board[i].board.title : '',
-                        views : findAllData_board[i] && findAllData_board[i].board.views ? findAllData_board[i].board.views : 0,
-                        createAt: `${date.getFullYear()}-${(date.getMonth() + 1)>= 10 ? (date.getMonth() + 1) : '0' + (date.getMonth() + 1) }-${date.getDate() >= 10 ? date.getDate() : '0' + date.getDate()} ${date.getHours()}시`
-                    }
-                    boxhtml += await list_item(i , data);
-                    if (findAllData_board.length === i + 1) {
-                        page_id = findAllData_board[i].id + 1;
-                    }
-                }
-                wrap.innerHTML += boxhtml;
-
-            } else {
-
-                const noneData = document.querySelector('.category-list');
-                noneData.innerHTML +=  `  <ul>
-                        <li>북마크한 게시물이 없어요</li>
-                    </ul>
-                `;
-            }
-
-        } catch (e) {
-            
-            console.log(e);
-        }
-    }   
-
-    async function chatRoomJoin(board_id){
-        
-        const res = await axios({
-            method: "post",
-            url: "/chat/join",
-            data: {
-                room_id:board_id,
-            }
-        })
-
-        if (res.data.result) {
-            alert('채팅방에 참여했습니다')
-            document.location.assign('/mychat')
-        }
-    }
-
-</script>
-
+    <script src="/public/js/index.js" defer></script>
+    <script src="/public/js/board/board_CRUD.js"></script>
+    <script src="/public/js/board/board_render.js"></script>
+    <script src="/public/js/board/board_render_func.js"></script>
+    <script src="/public/js/board/board_book_mark.js"></script>
+    <script src="/public/js/profile.js"></script>
+    <script src="/public/js/header.js"></script>
 </body>
 
 </html>
