--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -5,7 +5,6 @@ body {
 
 }
 
-
 .profile-contents {
     font-family: Arial, sans-serif;
     max-width: 1200px; min-height: 1000px;
@@ -35,7 +34,7 @@ body {
 .profile-edit-button {
     background-color: transparent;
     border: none;
-    color: white;
+    color: black;
     font-size: 20px;
     cursor: pointer;
 }
