--- a/public/css/board/board_list.css
+++ b/public/css/board/board_list.css
@@ -85,6 +85,13 @@
     object-position: center;
 }
 
+.board-card > .boardInfo >  .boxViews > span {
+    font-size: 0.7em;
+    color: rgb(255, 255, 255);
+    display: inline-block;
+    padding-bottom: 0.3em;
+}
+
 
 @media (min-width : 1281px) {
 
