--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,14 +1,15 @@
 
-* {
-    box-sizing: border-box;
-    font-size: 20px;
-    font-weight: 700;
+body {
+
     margin: 0;
     padding: 0;
 }
+
 .main-header {
     width: 100%; height: 60px; background-color: rgb(71,87,111);
-
+    box-sizing: border-box;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 .main-header > .header-layout {
@@ -61,7 +62,7 @@
 
 .main-header >  .header-layout  >.header-profie > .header-profile-tab {
     position: absolute; display: none;     z-index: 10000;
-    top: 35px; width: 150px; left: -120px; background-color: #fff;
+    top: 27px; width: 150px; left: -120px; background-color: #fff;
     border-radius: 9px;
     list-style: none;  border: 1px solid #ddd; padding: 1em;
 }
