--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -256,7 +256,7 @@
 
             } else {
 
-                const noneData = document.querySelector('.category-list');
+                const noneData = document.querySelector('#bookmarkList > .category-list');
                 noneData.innerHTML +=  `  <ul>
                         <li>북마크한 게시물이 없어요</li>
                     </ul>
