--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,7 +28,7 @@
                 <ul class="header-profile-tab">
                     <li id="mobileView"><a href="/">게시판 리스트</a> </li>
                     <li><a href="/profile">프로필</a> </li>
-                    <li><button type="button" onclick="">로그아웃</button></li>
+                    <li><button type="button" onclick="userLogOut()">로그아웃</button></li>
                 </ul>
             </div>
         </div>
