--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -237,7 +237,7 @@
     <script src="/public/js/board/board_render.js"></script>
     <script src="/public/js/board/board_render_func.js"></script>
     <script src="/public/js/board/board_book_mark.js"></script>
-    <script src="/public/js/profile.js"></script>
+    <script src="/public/js/profile/profile.js"></script>
     <script src="/public/js/header.js"></script>
 </body>
 
