--- a/views/profileEdit.ejs
+++ b/views/profileEdit.ejs
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>프로필 수정</title>
     <link rel="stylesheet" href="/public/css/profileEdit.css">
-    <script src="/public/js/profileEdit.js" defer></script>
+    <script src="/public/js/profile/profileEdit.js" defer></script>
 </head>
 
 <body>
