--- a/views/findPw.ejs
+++ b/views/findPw.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
-    <script src="/public/js/findPw.js" defer></script>
+    <script src="/public/js/login/findPw.js" defer></script>
     <title>비밀번호 찾기</title>
     <link rel="stylesheet" href="/public/css/findPw.css">
 </head>
