--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
-    <title>Document</title>
     <link rel="stylesheet" href="/public/css/login.css">
+    <script src="/public/js/login/login.js" defer></script>
+    <title>Document</title>
 </head>
 <body>
     <div class="login-container">
@@ -33,7 +34,4 @@
         </form>
     </div>
 </body>
-<script>
-</script>
-<script src="/public/js/login.js" defer></script>
 </html>
