--- a/public/css/profileEdit.css
+++ b/public/css/profileEdit.css
@@ -33,7 +33,7 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 800px;
-    overflow-y: auto;
+    max-height: 1180px;
 }
 
 /* 상단 프로필 사진 영역 */
@@ -64,10 +64,15 @@ body {
 }
 
 /* 유저 정보 상단 영역 */
+.center-info {
+    padding-left: 35px;
+}
+
 .center-top-info {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: 20px;
 }
 
 .info-set {
@@ -120,19 +125,20 @@ body {
 }
 
 /* 저장 버튼 스타일 */
+
 .btn {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 20px;
+    
 }
 .save_btn button {
-    background-color: #3498db;
+    background-color: rgb(123,142,169);
     color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
-    margin-bottom: 10px;
 }
 
 .cancel_btn button {
@@ -146,7 +152,7 @@ body {
 }
 
 .save_btn button:hover {
-    background-color: #2980b9;
+    background-color: rgb(71,87,111);
 }
 .cancel_btn button:hover {
     background-color: #9c9c9c;
@@ -161,7 +167,7 @@ body {
 
 a.pwEdit {
     display: inline-block;
-    background-color: #3498db;
+    background-color: rgb(123,142,169);
     color: #fff;
     padding: 5px 10px;
     border: none;
@@ -170,7 +176,7 @@ a.pwEdit {
 }
 
 a.pwEdit:hover {
-    background-color: #2980b9;
+    background-color: rgb(71,87,111);
 }
 
 /* 회원탈퇴 링크 */
