--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="" alt="로고" class="logo">
+        <span class="header-logo logo"><a href="/">Chatta</a></span>
         <form name="signin-form" class="signin-form">
             <h2>로그인</h2>
             <input type="text" id="userid" placeholder="아이디" >
