--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,6 +19,7 @@
     </div>
         <form name="signup-form">
             <div class="user-info">
+                <span class="header-logo logo"><a href="/">Chatta</a></span>
                 <p>회원가입</p>
                 <label for="userid">아이디</label><span class="must"> (필수)</span>
                 <div class="info-set id">
