--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,7 +25,7 @@
                 <div class="profile" onclick="toggleHeaderProfile()">
                     <img src="<%= profileImage %>" alt="profile_image" />
                 </div>
-                <span class="allow" style="color: #fff;" onclick="toggleHeaderProfile()">&dtrif;</span>
+                <span class="allow" style="color: #fff;  cursor: pointer; padding-left: 0.1em;" onclick="toggleHeaderProfile()">&dtrif;</span>
                 <ul class="header-profile-tab">
                     <li id="mobileView"><a href="/mychat">나의 채팅방</a> </li>
                     <li><a href="/profile">프로필</a> </li>
@@ -234,15 +234,6 @@
             </div>
         </div>
     </footer>
-<<<<<<< HEAD
-    <script src="/public/js/index.js" defer></script>
-    <script src="/public/js/board/board_CRUD.js"></script>
-    <script src="/public/js/board/board_render.js"></script>
-    <script src="/public/js/board/board_render_func.js"></script>
-    <script src="/public/js/board/board_book_mark.js"></script>
-    <script src="/public/js/profile.js"></script>
-    <script src="/public/js/header.js"></script>
-=======
 <script src="/public/js/index.js" defer></script>
 <script src="/public/js/board/board_CRUD.js"></script>
 <script src="/public/js/board/board_render.js"></script>
@@ -319,7 +310,6 @@
 
 </script>
 
->>>>>>> asd
 </body>
 
 </html>
