--- a/public/css/board/board_edit.css
+++ b/public/css/board/board_edit.css
@@ -94,7 +94,7 @@ body {
 }
 
 .board-button {
-    height: 40px; color: #000;
+    height: 40px; color: #000; cursor: pointer;
     background-color:rgb(255, 255, 255);
     border: solid #ccc 3px;
     border-radius: 10px;  margin-bottom: 10px;
