--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,5 @@
 
 body {
-
     margin: 0;
     padding: 0;
 }
@@ -37,9 +36,10 @@ body {
     justify-content: center;
 }
 .main-header >  .header-layout  >.header-menu > li > a {
-    font-size: 0.7em;
+    font-size: 1.3em;
     text-decoration: none;
     color: #fff;
+    font-weight: bold;
 }
 
 .main-header > .header-layout > .header-profie {
@@ -69,7 +69,7 @@ body {
 
 .main-header >  .header-layout  >.header-profie > .header-profile-tab > li {
     cursor: pointer;
-    padding: 0.5em 0; text-align: center;
+    text-align: center;
 }
 
 .main-header >  .header-layout  >.header-profie > .header-profile-tab > #mobileView {
@@ -77,7 +77,8 @@ body {
 
 }
 .main-header >  .header-layout  >.header-profie > .header-profile-tab > li > a {
-    font-size: 0.65em;
+    font-size: 0.65em;  margin: 0.8em 0;
+    padding: 0.5em 0; display: block;
     color: #000; text-decoration: none;
 }
 
