--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                 <div class="profile"  onclick="toggleHeaderProfile()">
                     <img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/test_1280.jpg" alt="profile_image" />
                 </div>
-                <span class="allow" style="color: #fff; cursor: pointer; padding-left: 0.1em;" onclick="toggleHeaderProfile()">&dtrif;</span>
+                <span class="allow" onclick="toggleHeaderProfile()">▼</span>
                 <ul class="header-profile-tab">
                     <li id="mobileView"><a href="/mychat">나의 채팅방</a> </li>
                     <li><a href="/profile">프로필</a> </li>
