--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,7 +25,7 @@
                 <div class="profile" onclick="toggleHeaderProfile()">
                     <img src="<%= profileImage %>" alt="profile_image" />
                 </div>
-                <span class="allow" style="color: #fff;  cursor: pointer; padding-left: 0.1em;" onclick="toggleHeaderProfile()">&dtrif;</span>
+                <span class="allow" onclick="toggleHeaderProfile()">▼</span>
                 <ul class="header-profile-tab">
                     <li id="mobileView"><a href="/mychat">나의 채팅방</a> </li>
                     <li><a href="/profile">프로필</a> </li>
